Fix adjustable width and text alignment of quote

--- a/style.css
+++ b/style.css
@@ -121,8 +121,6 @@ img {
     border-color: #3882f6;
 }
 
-
-
 .quote-section {
     background-color: #e5e7eb;
     display: flex;
@@ -132,8 +130,12 @@ img {
     padding: 70px;
 }
 
+.quote-box {
+    min-width: 500px;
+    max-width: 900px;
+}
+
 .quote-section .quote {
-    width: 600px;
     font-size: 36px;
     font-style: italic;
     font-weight: light;
@@ -142,7 +144,8 @@ img {
 
 .quote-section .author {
     align-self: flex-end;
-    width: 600px;
+    text-align: end;
+    margin-right: 40px;
     font-size: 24px;
     font-weight: bold;
     color: #1f2937;
